# librepair-experiments

./: -  .appveyor.yml  .codacy.yaml  .codecov.yml  .factorypath  .flattened-pom.xml  .gitattributes  .gitignore  .gitmodules  .prepare_install.sh  .project  .run-travis.sh  .springWebflow  .travis-output-filters  .travis.sh  .travis.yml  .travis_defects4j_1.sh  .travis_defects4j_2.sh  .travis_nopol_core.sh  .travis_nopol_intellij.sh  .travis_nopol_server.sh  .verified-links  05-02-2018.txt  14-02-2018.txt  25-03-2018.txt  AmodeusOptions.properties  C:\test\test.mztab  CHANGELOG.md  CHANGES  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chart 1_all.json  Closure 114_all.json  ConfigSQL_RU.properties  DUMMY.csv  DUMMY.json  Dockerfile  GameContext.serial  INSTALL  INSTALL.md  (+48726 more)
.ci/: release_docs.dsl
.circleci/: config.yml
.descoped/: module.json
.github/: ISSUE_TEMPLATE.md
.travis/: script.sh  travis_create_slaves.sh
2.3_SQL_JDBC/: classpath.info
AdaptiveVocabularyAssessmentModule/: NonWords_EN_2rounds_1.java  NonWords_EN_2rounds_2.java  NonWords_NL_1round.java  NonWords_NL_2rounds_1.java  NonWords_NL_2rounds_2.java  Words_EN_2rounds_1.java  Words_EN_2rounds_2.java  Words_NL_1round.java.java  Words_NL_2rounds_1.java  Words_NL_2rounds_2.java  classpath.info
Appendix/: Dummydatacars.json
ArgusCore/: classpath.info
Back-end/: classpath.info
BackEnd-2/: classpath.info
Backend/: classpath.info
BaragonService/: classpath.info
Client/: classpath.info
ClientSdk/: classpath.info
Core/: classpath.info
recorder/src/idl/: .gitignore  CMakeLists.txt  recording.proto
(+183496 files in other folders)
