include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIR})
protobuf_generate_cpp(PROTO_WORK_SRC PROTO_WORK_HEADER work_entities.proto)
protobuf_generate_cpp(PROTO_RECORDER_SRC PROTO_RECORDER_HEADER recorder.proto)
protobuf_generate_cpp(PROTO_RECORDING_SRC PROTO_RECORDING_HEADER recording.proto)
set(CMAKE_CXX_FLAGS "-fPIC")
add_library(proto STATIC ${PROTO_WORK_HEADER} ${PROTO_WORK_SRC} ${PROTO_RECORDER_HEADER} ${PROTO_RECORDER_SRC} ${PROTO_RECORDING_HEADER} ${PROTO_RECORDING_SRC})
set(PROTOBUF_LIBRARY "${PROTOBUF_LIBRARY}" PARENT_SCOPE)
set(PROTOBUF_INCLUDE_DIR "${PROTOBUF_INCLUDE_DIR}" PARENT_SCOPE)
